# genai-integration

./: pyproject.toml
process_pdf/: process_pdf.py
process_pdf/rag7/e8344560-ef0a-4135-90be-6f9219e78576/: index_metadata.pickle
