[tool.poetry]
name = "trial"
version = "0.1.0"
description = ""
authors = ["Archana-M-123 <archana.m@exathought.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.33"
langchain-text-splitters = "^0.0.1"
tiktoken = "^0.6.0"
matplotlib = "^3.8.4"
openai = "^1.16.2"
langchain-openai = "^0.1.1"
numpy = "^1.22.5"
umap-learn = "0.5.1"
scikit-learn = "^1.4.2"
pandas = "1.3.3"
retrying = "1.3.3"
chromadb = "^0.4.24"
langchain-core = "^0.1.43"
Markdown = "^3.6"
ipython = "^8.23.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
